--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,14 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <link
       href="https://api.mapbox.com/mapbox-gl-js/v2.5.0/mapbox-gl.css"
       rel="stylesheet"
     />
