--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         padding: 0;
       }
     </style>
-    <title>BR dashboard</title>
+    <title>Atlas of Opportunity - Brazil</title>
   </head>
   <body>
     <div id="root"></div>
