--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
       <div id="progress-bar"></div>
     </div>
     <div id="loader">
+      <h1>Welcome to Atlas</h1><br>
+      <h1>Bem-vindo ao Atlas</h1><br><br>
       <h1>Loading...</h1>
     </div>
     <div id="root"></div>
