--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
       #loader {
         display: flex;
+        flex-direction: column; /* Set the main axis to be vertical */
         align-items: center;
         justify-content: center;
         height: 100vh;
