--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
         padding: 0;
       }
 
+      h1 {
+        font-size: 50px;
+      }
+
+      h2 {
+        font-size: 40px;
+      }
+
+      h3 {
+        font-size: 30px;
+      }
+
       #loader {
         display: flex;
         flex-direction: column; /* Set the main axis to be vertical */
@@ -58,9 +70,9 @@
       <div id="progress-bar"></div>
     </div>
     <div id="loader">
-      <h1>Welcome to Atlas</h1><br>
-      <h1>Bem-vindo ao Atlas</h1><br><br>
-      <h1>Loading...</h1>
+      <h1>Atlas de Oportunidades</h1><br>
+      <h2>Atlas of Opportunities</h2><br><br>
+      <h3>Carregando/Loading...</h3>
     </div>
     <div id="root"></div>
     <script type="module">
