Pequenas mudanças de navegação e adição de mais alguns membros

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
             <div class="collapse navbar-collapse sub-menu-bar" id="navbarOne">
               <ul class="navbar-nav m-auto">
                 <li class="nav-item">
-                  <a class="active page-scroll" href="#hero-area">O PROJETO</a>
+                  <a href="index.html">O PROJETO</a>
                 </li>
                 <li class="nav-item">
-                  <a class="page-scroll" href="#colaboradores">COLABORADORES</a>
+                  <a href="team.html">COLABORADORES</a>
                 </li>
                 <li class="nav-item">
                   <a class="page-scroll" href="#pricing">PERFIL DE DADOS</a>
@@ -319,3 +319,5 @@
 </body>
 
 </html>
+
+<!-- ATLAS LOADER -->
