--- a/team.html
+++ b/team.html
@@ -40,7 +40,7 @@
                 <div class="col-lg-12">
                     <nav class="navbar navbar-expand-lg mb-3">
                         <a class="navbar-brand" href="index.html">
-                            <img src="assets/images/white-logo.svg" alt="Logo" />
+                            <img src="assets/images/logo.svg" alt="Logo" />
                         </a>
 
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -741,6 +741,162 @@
                                 <span class="designation">Reseacher
                                     <br>
                                     Università di Bologna</span>
+                            </div>
+                            <!-- End Info Box -->
+                        </div>
+                    </div>
+                </div>
+                <!-- End Single Team -->
+                <!-- Single Team -->
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="single-team">
+                        <!-- Image -->
+                        <div class="image">
+                            <img src="assets/images/contribuitors/ariano_bangemann.jpg" alt="Image" />
+                            <!-- Social -->
+                            <ul class="social">
+                                <li>
+                                    <a href="javascript:void(0)"> <i class="lni lni-facebook-filled"></i> </a>
+                                </li>
+                                <li>
+                                    <a href="javascript:void(0)"> <i class="lni lni-twitter-original"></i> </a>
+                                </li>
+                                <li>
+                                    <a href="javascript:void(0)"> <i class="lni lni-linkedin-original"></i> </a>
+                                </li>
+                                <li>
+                                    <a href="javascript:void(0)"> <i class="lni lni-behance-original"></i> </a>
+                                </li>
+                            </ul>
+                            <!-- End Social -->
+                        </div>
+                        <!-- End Image -->
+                        <div class="info-head">
+                            <!-- Info Box -->
+                            <div class="info-box">
+                                <h4 class="name">Ariano Bangemann
+                                </h4>
+                                <span class="designation">
+                                    Reseacher
+                                    <br>
+                                    UFRGS</span>
+                            </div>
+                            <!-- End Info Box -->
+                        </div>
+                    </div>
+                </div>
+                <!-- End Single Team -->
+                <!-- Single Team -->
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="single-team">
+                        <!-- Image -->
+                        <div class="image">
+                            <img src="assets/images/contribuitors/atra_bahceci .jpg" alt="Image" />
+                            <!-- Social -->
+                            <ul class="social">
+                                <li>
+                                    <a href="javascript:void(0)"> <i class="lni lni-facebook-filled"></i> </a>
+                                </li>
+                                <li>
+                                    <a href="javascript:void(0)"> <i class="lni lni-twitter-original"></i> </a>
+                                </li>
+                                <li>
+                                    <a href="javascript:void(0)"> <i class="lni lni-linkedin-original"></i> </a>
+                                </li>
+                                <li>
+                                    <a href="javascript:void(0)"> <i class="lni lni-behance-original"></i> </a>
+                                </li>
+                            </ul>
+                            <!-- End Social -->
+                        </div>
+                        <!-- End Image -->
+                        <div class="info-head">
+                            <!-- Info Box -->
+                            <div class="info-box">
+                                <h4 class="name">Atra Zeynep Bahceci
+                                </h4>
+                                <span class="designation">
+                                    Reseacher
+                                    <br>
+                                    Sabanci University</span>
+                            </div>
+                            <!-- End Info Box -->
+                        </div>
+                    </div>
+                </div>
+                <!-- End Single Team -->
+                <!-- Single Team -->
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="single-team">
+                        <!-- Image -->
+                        <div class="image">
+                            <img src="assets/images/contribuitors/fernanda_klein.jpg" alt="Image" />
+                            <!-- Social -->
+                            <ul class="social">
+                                <li>
+                                    <a href="javascript:void(0)"> <i class="lni lni-facebook-filled"></i> </a>
+                                </li>
+                                <li>
+                                    <a href="javascript:void(0)"> <i class="lni lni-twitter-original"></i> </a>
+                                </li>
+                                <li>
+                                    <a href="javascript:void(0)"> <i class="lni lni-linkedin-original"></i> </a>
+                                </li>
+                                <li>
+                                    <a href="javascript:void(0)"> <i class="lni lni-behance-original"></i> </a>
+                                </li>
+                            </ul>
+                            <!-- End Social -->
+                        </div>
+                        <!-- End Image -->
+                        <div class="info-head">
+                            <!-- Info Box -->
+                            <div class="info-box">
+                                <h4 class="name">Fernanda Klein
+                                </h4>
+                                <span class="designation">
+                                    Reseacher
+                                    <br>
+                                    UFRGS</span>
+                            </div>
+                            <!-- End Info Box -->
+                        </div>
+                    </div>
+                </div>
+                <!-- End Single Team -->
+                <!-- Single Team -->
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="single-team">
+                        <!-- Image -->
+                        <div class="image">
+                            <img src="assets/images/contribuitors/jessica_miranda.jpg" alt="Image" />
+                            <!-- Social -->
+                            <ul class="social">
+                                <li>
+                                    <a href="javascript:void(0)"> <i class="lni lni-facebook-filled"></i> </a>
+                                </li>
+                                <li>
+                                    <a href="javascript:void(0)"> <i class="lni lni-twitter-original"></i> </a>
+                                </li>
+                                <li>
+                                    <a href="javascript:void(0)"> <i class="lni lni-linkedin-original"></i> </a>
+                                </li>
+                                <li>
+                                    <a href="javascript:void(0)"> <i class="lni lni-behance-original"></i> </a>
+                                </li>
+                            </ul>
+                            <!-- End Social -->
+                        </div>
+                        <!-- End Image -->
+                        <div class="info-head">
+                            <!-- Info Box -->
+                            <div class="info-box">
+                                <h4 class="name">Jessica Miranda
+                                </h4>
+                                <span class="designation">
+                                    Reseacher
+                                    <br>
+                                    UFRGS</span>
                             </div>
                             <!-- End Info Box -->
                         </div>
