--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-  <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.svg" />
+  <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico" />
 
   <!--====== Title ======-->
   <title>Atlas de Oportunidades</title>
