Adicionado os banners a pagina inicial

--- a/team.html
+++ b/team.html
@@ -550,7 +550,7 @@
                                 </h4>
                                 <span class="designation">Developer
                                     <br>
-                                    UFRGS</span>
+                                    IME</span>
                             </div>
                             <!-- End Info Box -->
                         </div>
