--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="navbar-btn d-none d-sm-inline-block">
               <ul>
 
-                <li><a  class="btn primary-btn" href="http://3.92.188.34:3000/atlas.html">Ir para o atlas</a></li> <!--http://3.92.188.34:3000/atlas.html-->
+                <li><a  class="btn primary-btn" href="atlas.html">Ir para o atlas</a></li> <!--http://3.92.188.34:3000/atlas.html-->
                 <!--http://3.92.188.34:3000/atlas.html-->
               </ul>
             </div>
