--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="navbar-btn d-none d-sm-inline-block">
               <ul>
 
-                <li><a  class="btn primary-btn" href="http://3.92.188.34:3000/atlas.html">Ir para o atlas</a></li> <!--http://3.92.188.34:3000/atlas.html-->
+                <li><a class="btn primary-btn" href="http://3.92.188.34:3000/atlas.html">Ir para o atlas</a></li> <!--http://3.92.188.34:3000/atlas.html-->
                 <!--http://3.92.188.34:3000/atlas.html-->
               </ul>
             </div>
@@ -100,7 +100,7 @@
           <div class="row align-items-center">
             <div class="col-lg-6 co-12">
               <div class="home-slider">
-                <div class="header-text"><br><br>
+                <div class="header-text"><br><br><br>
                   <h1>
                     Descubra o poder da ciência de dados e da Inteligência Artificial para impulsionar o
                     desenvolvimento!<br />
