--- a/atlas.html
+++ b/atlas.html
@@ -40,7 +40,7 @@
       <div class="row">
         <div class="col-lg-12">
           <nav class="navbar navbar-expand-lg">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="atlas.html">
               <img src="assets/images/logo.svg" alt="Logo" />
             </a>
 
@@ -54,7 +54,7 @@
             <div class="collapse navbar-collapse sub-menu-bar" id="navbarOne">
               <ul class="navbar-nav m-auto">
                 <li class="nav-item">
-                  <a href="index.html">O PROJETO</a>
+                  <a href="atlas.html">O PROJETO</a>
                 </li>
                 <li class="nav-item">
                   <a href="team.html">COLABORADORES</a>
@@ -77,7 +77,7 @@
             <div class="navbar-btn d-none d-sm-inline-block">
               <ul>
 
-                <li><a class="btn primary-btn" href="http://3.92.188.34:3000/atlas.html">Ir para o atlas</a></li> <!--http://3.92.188.34:3000/atlas.html-->
+                <li><a class="btn primary-btn" href="http://3.92.188.34:3000/">Ir para o atlas</a></li> <!--http://3.92.188.34:3000/atlas.html-->
                 <!--http://3.92.188.34:3000/atlas.html-->
               </ul>
             </div>
