--- a/team.html
+++ b/team.html
@@ -39,7 +39,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <nav class="navbar navbar-expand-lg mb-3">
-                        <a class="navbar-brand" href="index.html">
+                        <a class="navbar-brand" href="atlas.html">
                             <img src="assets/images/logo.svg" alt="Logo" />
                         </a>
 
@@ -54,7 +54,7 @@
                         <div class="collapse navbar-collapse sub-menu-bar" id="navbarOne">
                             <ul class="navbar-nav m-auto">
                                 <li class="nav-item">
-                                  <a href="index.html">O PROJETO</a>
+                                  <a href="atlas.html">O PROJETO</a>
                                 </li>
                                 <li class="nav-item">
                                   <a href="team.html">COLABORADORES</a>
@@ -76,7 +76,7 @@
 
                         <div class="navbar-btn d-none d-sm-inline-block">
                             <ul>
-                                <li><a class="btn primary-btn" href="javascript:void(0)">Ir para o atlas</a></li>
+                                <li><a class="btn primary-btn" href="http://3.92.188.34:3000/">Ir para o atlas</a></li>
                             </ul>
                         </div>
                     </nav>
