--- a/atlas/index.html
+++ b/atlas/index.html
@@ -28,7 +28,7 @@
   <!--====== Glightbox css ======-->
   <link rel="stylesheet" href="assets/css/glightbox.min.css" />
 
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles/index.css" />
 </head>
 
 <body>
@@ -77,7 +77,7 @@
             <div class="navbar-btn d-none d-sm-inline-block">
               <ul>
 
-                <li><a class="btn primary-btn" href="http://3.92.188.34:3000/">Ir para o atlas</a></li> <!--http://3.92.188.34:3000/atlas.html-->
+                <li><a class="btn primary-btn" href="http://3.92.188.34:3000/">Ir para o atlas</a></li>
                 <!--http://3.92.188.34:3000/atlas.html-->
               </ul>
             </div>
@@ -91,7 +91,7 @@
   </section>
 
   <!--====== NAVBAR ONE PART ENDS ======-->
-<br><br><br>
+  <br><br><br>
   <!-- Start header Area -->
   <section id="hero-area" class="header-area header-ten">
     <div class="background-div-logo">
@@ -231,7 +231,7 @@
           </div>
           <div class="col-lg-6 col-12">
             <div class="header-image">
-              <img class="shape3" src="assets/images/eixos_tematicos.png" alt="#" />
+              <img class="shape3" src="assets/images/infografico.png" alt="#" />
             </div>
           </div>
         </div>
@@ -241,61 +241,141 @@
   </section>
   <!--/ End header Area -->
 
-  <!--====== FOOTER FIVE PART START ======-->
-
-  <section class="footer-area footer-five">
+  <!--====== VIDEO TWO PART START ======-->
+  <section class="video-area video-two">
     <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-lg-5">
-          <div class="footer-top-content">
-            <div class="footer-logo text-center">
-              <a href="index.html">
-                <img src="assets/images/logo.svg" alt="Logo" />
-              </a>
+      <div class="row">
+        <div class="col-12">
+          <div class="inner-content-head">
+            <div class="inner-content">
+              <span class="shape2">
+                <svg viewBox="0 0 22 80" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M18.7 4.60019C17.8 4.60019 17.2 3.90019 17.1 3.10019C17 2.30019 17.8 1.60019 18.6 1.50019C19.4 1.40019 20.1 2.20019 20.2 3.00019C20.2 3.90019 19.5 4.60019 18.7 4.60019ZM18.7 12.8002C17.8 12.8002 17.2 12.1002 17.1 11.3002C17 10.5002 17.8 9.80019 18.6 9.70019C19.4 9.60019 20.1 10.4002 20.2 11.2002C20.2 12.1002 19.5 12.8002 18.7 12.8002ZM18.7 21.1002C17.8 21.1002 17.2 20.4002 17.1 19.6002C17 18.8002 17.8 18.1002 18.6 18.0002C19.4 17.9002 20.1 18.7002 20.2 19.5002C20.2 20.4002 19.5 21.0002 18.7 21.1002ZM18.7 29.3002C17.8 29.3002 17.2 28.6002 17.1 27.8002C17 27.0002 17.8 26.3002 18.6 26.2002C19.4 26.1002 20.1 26.9002 20.2 27.7002C20.2 28.6002 19.5 29.3002 18.7 29.3002ZM18.7 37.5002C17.8 37.5002 17.2 36.8002 17.1 36.0002C17 35.2002 17.8 34.5002 18.6 34.4002C19.4 34.3002 20.1 35.1002 20.2 35.9002C20.2 36.8002 19.5 37.5002 18.7 37.5002ZM10.7 4.60019C9.79995 4.60019 9.19995 3.90019 9.19995 3.10019C9.19995 2.30019 9.89995 1.60019 10.7 1.60019C11.6 1.60019 12.2 2.30019 12.2 3.10019C12.2 3.90019 11.6 4.60019 10.7 4.60019ZM10.7 12.8002C9.79995 12.8002 9.19995 12.1002 9.19995 11.3002C9.19995 10.5002 9.89995 9.80019 10.7 9.80019C11.6 9.80019 12.2 10.5002 12.2 11.3002C12.2 12.1002 11.6 12.8002 10.7 12.8002ZM10.7 21.0002C9.79995 21.0002 9.19995 20.3002 9.19995 19.5002C9.19995 18.7002 9.79995 18.0002 10.7 18.0002C11.6 18.0002 12.2 18.7002 12.2 19.5002C12.2 20.4002 11.6 21.0002 10.7 21.0002C10.7 21.1002 10.7 21.1002 10.7 21.0002ZM10.7 29.3002C9.79995 29.3002 9.19995 28.6002 9.19995 27.8002C9.19995 27.0002 9.89995 26.3002 10.7 26.3002C11.6 26.3002 12.2 27.0002 12.2 27.8002C12.2 28.6002 11.6 29.3002 10.7 29.3002ZM10.7 37.5002C9.79995 37.5002 9.19995 36.8002 9.19995 36.0002C9.19995 35.2002 9.89995 34.5002 10.7 34.5002C11.6 34.5002 12.2 35.2002 12.2 36.0002C12.2 36.8002 11.6 37.5002 10.7 37.5002ZM2.69995 4.60019C1.79995 4.60019 1.19995 3.90019 1.19995 3.10019C1.19995 2.30019 1.89995 1.60019 2.69995 1.60019C3.59995 1.60019 4.19995 2.30019 4.19995 3.10019C4.29995 3.90019 3.59995 4.60019 2.69995 4.60019ZM2.69995 12.8002C1.79995 12.8002 1.19995 12.1002 1.19995 11.3002C1.19995 10.5002 1.89995 9.80019 2.69995 9.80019C3.59995 9.80019 4.19995 10.5002 4.19995 11.3002C4.29995 12.1002 3.59995 12.8002 2.69995 12.8002ZM2.69995 21.0002C1.79995 21.0002 1.19995 20.3002 1.19995 19.5002C1.19995 18.7002 1.89995 18.0002 2.69995 18.0002C3.59995 18.0002 4.19995 18.7002 4.19995 19.5002C4.29995 20.4002 3.59995 21.0002 2.69995 21.0002C2.69995 21.1002 2.69995 21.1002 2.69995 21.0002ZM2.69995 29.3002C1.79995 29.3002 1.19995 28.6002 1.19995 27.8002C1.19995 27.0002 1.89995 26.3002 2.69995 26.3002C3.59995 26.3002 4.19995 27.0002 4.19995 27.8002C4.29995 28.6002 3.59995 29.3002 2.69995 29.3002ZM2.69995 37.5002C1.79995 37.5002 1.19995 36.8002 1.19995 36.0002C1.19995 35.2002 1.89995 34.5002 2.69995 34.5002C3.59995 34.5002 4.19995 35.2002 4.19995 36.0002C4.29995 36.8002 3.59995 37.5002 2.69995 37.5002ZM18.7 45.6002C17.8 45.6002 17.2 44.9002 17.1 44.1002C17 43.3002 17.8 42.6002 18.6 42.5002C19.4 42.4002 20.1 43.2002 20.2 44.0002C20.2 44.9002 19.5 45.6002 18.7 45.6002ZM18.7 53.8002C17.8 53.8002 17.2 53.1002 17.1 52.3002C17 51.5002 17.8 50.8002 18.6 50.7002C19.4 50.6002 20.1 51.4002 20.2 52.2002C20.2 53.2002 19.5 53.8002 18.7 53.8002C18.7 53.9002 18.7 53.9002 18.7 53.8002ZM18.7 62.1002C17.8 62.1002 17.2 61.4002 17.1 60.6002C17 59.8002 17.8 59.1002 18.6 59.0002C19.4 58.9002 20.1 59.7002 20.2 60.5002C20.2 61.4002 19.5 62.1002 18.7 62.1002ZM18.7 70.3002C17.8 70.3002 17.2 69.6002 17.1 68.8002C17 68.0002 17.8 67.3002 18.6 67.2002C19.4 67.1002 20.1 67.9002 20.2 68.7002C20.2 69.6002 19.5 70.3002 18.7 70.3002ZM18.7 78.5002C17.8 78.5002 17.2 77.8002 17.1 77.0002C17 76.2002 17.8 75.5002 18.6 75.4002C19.4 75.3002 20.1 76.1002 20.2 76.9002C20.2 77.8002 19.5 78.5002 18.7 78.5002ZM10.7 45.6002C9.79995 45.6002 9.19995 44.9002 9.19995 44.1002C9.19995 43.3002 9.89995 42.6002 10.7 42.6002C11.6 42.6002 12.2 43.3002 12.2 44.1002C12.2 44.9002 11.6 45.6002 10.7 45.6002ZM10.7 53.8002C9.79995 53.8002 9.19995 53.1002 9.19995 52.3002C9.19995 51.5002 9.89995 50.8002 10.7 50.8002C11.6 50.8002 12.2 51.5002 12.2 52.3002C12.2 53.2002 11.6 53.8002 10.7 53.8002C10.7 53.9002 10.7 53.9002 10.7 53.8002ZM10.7 62.1002C9.79995 62.1002 9.19995 61.4002 9.19995 60.6002C9.19995 59.8002 9.79995 59.0002 10.7 59.0002C11.6 59.0002 12.2 59.7002 12.2 60.5002C12.2 61.4002 11.6 62.1002 10.7 62.1002ZM10.7 70.3002C9.79995 70.3002 9.19995 69.6002 9.19995 68.8002C9.19995 68.0002 9.89995 67.3002 10.7 67.3002C11.6 67.3002 12.2 68.0002 12.2 68.8002C12.2 69.6002 11.6 70.3002 10.7 70.3002ZM10.7 78.5002C9.79995 78.5002 9.19995 77.8002 9.19995 77.0002C9.19995 76.2002 9.89995 75.5002 10.7 75.5002C11.6 75.5002 12.2 76.2002 12.2 77.0002C12.2 77.8002 11.6 78.5002 10.7 78.5002ZM2.69995 45.6002C1.79995 45.6002 1.19995 44.9002 1.19995 44.1002C1.19995 43.3002 1.89995 42.6002 2.69995 42.6002C3.59995 42.6002 4.19995 43.3002 4.19995 44.1002C4.29995 44.9002 3.59995 45.6002 2.69995 45.6002ZM2.69995 53.8002C1.79995 53.8002 1.19995 53.1002 1.19995 52.3002C1.19995 51.5002 1.89995 50.8002 2.69995 50.8002C3.59995 50.8002 4.19995 51.5002 4.19995 52.3002C4.29995 53.2002 3.59995 53.8002 2.69995 53.8002C2.69995 53.9002 2.69995 53.9002 2.69995 53.8002ZM2.69995 62.1002C1.79995 62.1002 1.19995 61.4002 1.19995 60.6002C1.19995 59.8002 1.89995 59.0002 2.69995 59.0002C3.59995 59.0002 4.19995 59.7002 4.19995 60.5002C4.29995 61.4002 3.59995 62.1002 2.69995 62.1002ZM2.69995 70.3002C1.79995 70.3002 1.19995 69.6002 1.19995 68.8002C1.19995 68.0002 1.89995 67.3002 2.69995 67.3002C3.59995 67.3002 4.19995 68.0002 4.19995 68.8002C4.29995 69.6002 3.59995 70.3002 2.69995 70.3002ZM2.69995 78.5002C1.79995 78.5002 1.19995 77.8002 1.19995 77.0002C1.19995 76.2002 1.89995 75.5002 2.69995 75.5002C3.59995 75.5002 4.19995 76.2002 4.19995 77.0002C4.29995 77.8002 3.59995 78.5002 2.69995 78.5002Z"
+                    fill="#155BD5" />
+                </svg>
+              </span>
+              <span class="shape1">
+                <svg viewBox="0 0 49 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M24.2001 1C11.1001 1 0.600098 11.6 0.600098 24.6C0.600098 37.6 11.2001 48.2 24.2001 48.2C37.2001 48.2 47.8001 37.6 47.8001 24.6C47.8001 11.6 37.2001 1 24.2001 1ZM24.2001 40C15.7001 40 8.8001 33.1 8.8001 24.6C8.8001 16.1 15.7001 9.2 24.2001 9.2C32.7001 9.2 39.6001 16.1 39.6001 24.6C39.6001 33.1 32.7001 40 24.2001 40Z"
+                    fill="#155BD5" />
+                </svg>
+              </span>
+              <div class="section-title">
+                <span class="wow zoomIn" data-wow-delay=".2s"></span>
+                <h2 class="wow fadeInUp" data-wow-delay=".4s"></h2>
+                <p class="wow fadeInUp" data-wow-delay=".6s"></p>
+              </div>
+              <div class="intro-video-play">
+                <div class="play-thumb wow zoomIn" data-wow-delay=".2s">
+                  <a href="" class="glightbox video"><i class="lni lni-play"></i></a>
+                </div>
+              </div>
             </div>
-            <!-- footer logo -->
-            <h5 class="text-center social-title">Nossas redes</h5>
-            <ul class="social text-center mt-60">
-              <li>
-                <a href="javascript:void(0)"> <i class="lni lni-facebook-filled"></i> </a>
-              </li>
-              <li>
-                <a href="javascript:void(0)"> <i class="lni lni-twitter-original"></i> </a>
-              </li>
-              <li>
-                <a href="javascript:void(0)"> <i class="lni lni-instagram-filled"></i> </a>
-              </li>
-              <li>
-                <a href="javascript:void(0)"><i class="lni lni-linkedin-original"></i></a>
-              </li>
-            </ul>
-            <!-- social -->
-          </div>
-        </div>
-      </div>
-      <!-- row -->
-    </div>
-    <!-- container -->
-    <div class="footer-copyright">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <div class="copyright text-center">
-              <p class="text">© 2023 Atlas de Oportunidades | Todos os direitos reservados.</p>
-            </div>
-            <!--  copyright -->
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <!--====== FOOTER FIVE PART ENDS ======-->
+  <section class="call-action-area call-action-four">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-lg-8">
+          <div class="call-action-content text-center">
+            <h2 class="action-title">Não perca nenhuma atualização!</h2>
+            <p class="text">
+              Receba as novidades sobre o Atlas de Oportunidades diretamente no seu e-mail. Você pode cancelar o
+              cadastro a qualquer
+              momento!
+            </p>
+            <div class="call-action-form">
+              <form action="#">
+                <input type="text" placeholder="Digite seu email" />
+                <div class="action-btn rounded-buttons">
+                  <button class="btn primary-btn rounded-full">
+                    CADASTRAR
+                  </button>
+                </div>
+              </form>
+            </div>
+            <!-- call action form -->
+          </div>
+          <!-- call action content -->
+        </div>
+      </div>
+      <!-- row -->
+    </div>
+    <!-- container -->
+  </section>
 
+  <footer class="footer-sec">
+    <div class="logo-footer">
+      <img src="assets/images/logo_media.png" alt="Logo do footer">
+    </div>
+    <div class="contact-footer">
+      <h6>CONTATO</h6>
+      <ul class="footer-links">
+        <li class="footer-contact">
+          <div class="footer-location">
+            <img src="assets/images/icons/location.png" alt="Ícone de localização">
+            <p><strong>Universidade Federal do Rio Grande do Sul</strong><br>
+              Av. Paulo Gama, 110 - Bairro Farroupilha<br>
+              Porto Alegre - Rio Grande do Sul - CEP: 90040-060</p>
+          </div>
+        </li>
+        <li class="footer-mail">
+          <img src="assets/images/icons/mail.png" alt="Ícone de email">
+          <a href="mailto:gpmc-ea@ufrgs.br"><i>gpmc-ea@ufrgs.br</i></a>
 
-  <a href="#" class="scroll-top btn-hover">
-    <i class="lni lni-chevron-up"></i>
-  </a>
+        </li>
+        <li class="footer-phone">
+          <img src="assets/images/icons/phone.png" alt="Ícone de telefone">
+          <p><strong>+55 00 0000-0000</strong></p>
+        </li>
+      </ul>
+    </div>
+    <div class="social-footer">
+      <ul class="social-links">
+        <li>
+          <img src="assets/images/icons/linkedin.png" alt="Ícone do Linkedin">
+        </li>
+        <li>
+          <img src="assets/images/icons/facebook.png" alt="Ícone do Facebook">
+        </li>
+        <li>
+          <img src="assets/images/icons/instagram.png" alt="Ícone do Instagram">
+        </li>
+        <li>
+          <img src="assets/images/icons/github.png" alt="Ícone do Github">
+        </li>
+      </ul>
+    </div>
+    <div>
+      <ul class="nav-footer-links">
+        <li>
+          <a class="footer-link" href="">O PROJETO</a>
+        </li>
+        <li>
+          <a class="footer-link" href="">COLABORADORES</a>
+        </li>
+        <li>
+          <a class="footer-link" href="">PERFIL DE DADOS</a>
+        </li>
+        <li>
+          <a class="footer-link" href="">PUBLICAÇÕES</a>
+        </li>
+        <li>
+          <a href="http://3.92.188.34:3000/"><button class="atlas-btn">IR PARA O ATLAS</button></a>
+        </li>
+      </ul>
+    </div>
+  </footer>
+  <div class="copyright">
+    <p>© 2023 Atlas de Oportunidades | Todos os direitos reservados.</p>
+  </div>
+
 
   <!--====== js ======-->
   <script src="assets/js/bootstrap.bundle.min.js"></script>
