--- a/atlas/team.html
+++ b/atlas/team.html
@@ -28,7 +28,7 @@
     <!--====== Glightbox css ======-->
     <link rel="stylesheet" href="assets/css/glightbox.min.css" />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles/team.css" />
 </head>
 
 <body>
@@ -54,10 +54,10 @@
                         <div class="collapse navbar-collapse sub-menu-bar" id="navbarOne">
                             <ul class="navbar-nav m-auto">
                                 <li class="nav-item">
-                                  <a href="index.html">O PROJETO</a>
+                                    <a href="index.html">O PROJETO</a>
                                 </li>
                                 <li class="nav-item">
-                                  <a href="team.html">COLABORADORES</a>
+                                    <a href="team.html">COLABORADORES</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="page-scroll" href="#pricing">PERFIL DE DADOS</a>
@@ -75,11 +75,12 @@
                         </div>
 
                         <div class="navbar-btn d-none d-sm-inline-block">
-                          <ul>
+                            <ul>
 
-                            <li><a class="btn primary-btn" href="http://3.92.188.34:3000/">Ir para o atlas</a></li> <!--http://3.92.188.34:3000/atlas.html-->
-                            <!--http://3.92.188.34:3000/atlas.html-->
-                          </ul>
+                                <li><a class="btn primary-btn" href="http://3.92.188.34:3000/">Ir para o atlas</a></li>
+                                <!--http://3.92.188.34:3000/atlas.html-->
+                                <!--http://3.92.188.34:3000/atlas.html-->
+                            </ul>
                         </div>
                     </nav>
                     <!-- navbar -->
@@ -100,7 +101,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="content">
-                            <h2 class="fw-bold">Nossa Equipe</h2>
+                            <h2 class="fw-bold">EQUIPE ATUAL</h2>
                             <p>
                                 <!-- Conheça nossos membros. Texto sobre os membros aqui. -->
                             </p>
@@ -1220,22 +1221,73 @@
     <!-- ... -->
     <!-- End Brand Area -->
 
-    <!--====== FOOTER FIVE PART START ======-->
+    <!--====== FOOTER ======-->
 
-    <section class="footer-area footer-five">
-        <!-- ... -->
-    </section>
+    <footer class="footer-sec">
+        <div class="logo-footer">
+            <img src="assets/images/logo_media.png" alt="Logo do footer">
+        </div>
+        <div class="contact-footer">
+            <h6>CONTATO</h6>
+            <ul class="footer-links">
+                <li class="footer-contact">
+                    <div class="footer-location">
+                        <img src="assets/images/icons/location.png" alt="Ícone de localização">
+                        <p><strong>Universidade Federal do Rio Grande do Sul</strong><br>
+                            Av. Paulo Gama, 110 - Bairro Farroupilha<br>
+                            Porto Alegre - Rio Grande do Sul - CEP: 90040-060</p>
+                    </div>
+                </li>
+                <li class="footer-mail">
+                    <img src="assets/images/icons/mail.png" alt="Ícone de email">
+                    <a href="mailto:gpmc-ea@ufrgs.br"><i>gpmc-ea@ufrgs.br</i></a>
 
-    <!--====== FOOTER FIVE PART ENDS ======-->
-
-    <div class="made-in-ayroui mt-4">
-        <!-- ... -->
+                </li>
+                <li class="footer-phone">
+                    <img src="assets/images/icons/phone.png" alt="Ícone de telefone">
+                    <p><strong>+55 00 0000-0000</strong></p>
+                </li>
+            </ul>
+        </div>
+        <div class="social-footer">
+            <ul class="social-links">
+                <li>
+                    <img src="assets/images/icons/linkedin.png" alt="Ícone do Linkedin">
+                </li>
+                <li>
+                    <img src="assets/images/icons/facebook.png" alt="Ícone do Facebook">
+                </li>
+                <li>
+                    <img src="assets/images/icons/instagram.png" alt="Ícone do Instagram">
+                </li>
+                <li>
+                    <img src="assets/images/icons/github.png" alt="Ícone do Github">
+                </li>
+            </ul>
+        </div>
+        <div>
+            <ul class="nav-footer-links">
+                <li>
+                    <a class="footer-link" href="">O PROJETO</a>
+                </li>
+                <li>
+                    <a class="footer-link" href="">COLABORADORES</a>
+                </li>
+                <li>
+                    <a class="footer-link" href="">PERFIL DE DADOS</a>
+                </li>
+                <li>
+                    <a class="footer-link" href="">PUBLICAÇÕES</a>
+                </li>
+                <li>
+                    <a href="http://3.92.188.34:3000/"><button class="atlas-btn">IR PARA O ATLAS</button></a>
+                </li>
+            </ul>
+        </div>
+    </footer>
+    <div class="copyright">
+        <p>© 2023 Atlas de Oportunidades | Todos os direitos reservados.</p>
     </div>
-
-
-    <a href="#" class="scroll-top btn-hover">
-        <i class="lni lni-chevron-up"></i>
-    </a>
 
     <!--====== js ======-->
     <script src="assets/js/bootstrap.bundle.min.js"></script>
