atualizado o index.html

--- a/atlas/index.html
+++ b/atlas/index.html
@@ -138,9 +138,9 @@
   <div class="background-div">
     <div class="brand-area">
       <div class="container">
-        <div class="row">
+        <div class="column">
           <div class="col-lg-5 col-12">
-            <div class="section-title align-left">
+            <div class="section-title text-center">
               <h2>COLABORADORES</h2>
             </div>
           </div>
@@ -164,7 +164,7 @@
                 </li>
                 <li>
                   <a href="javascript:void(0)">
-                    <img src="assets/images/institutions/logoBologna_normal.png" alt="Brand Logo Images" />
+                    <img src="assets/images/institutions/logoBologna.png" alt="Brand Logo Images" />
                   </a>
                 </li>
                 <li>
