--- a/atlas/team.html
+++ b/atlas/team.html
@@ -705,7 +705,7 @@
                                 </h4>
                                 <span class="designation">Reseacher
                                     <br>
-                                    Università di Bologna</span>
+                                    Bocconi Università</span>
                             </div>
                             <!-- End Info Box -->
                         </div>
@@ -743,7 +743,7 @@
                                 </h4>
                                 <span class="designation">Reseacher
                                     <br>
-                                    Università di Bologna</span>
+                                    Bocconi Università</span>
                             </div>
                             <!-- End Info Box -->
                         </div>
