--- a/atlas/team.html
+++ b/atlas/team.html
@@ -1020,7 +1020,9 @@
                     </div>
                 </div>
                 <!-- End Single Team -->
-                <h2>EX-MEMBROS</h2>
+                <div class="text-center">
+                    <h2>EX-MEMBROS</h2>
+                </div>
                 <!-- Single Team -->
                 <div class="col-lg-3 col-md-6 col-12">
                     <div class="single-team">
@@ -1242,10 +1244,6 @@
                     <img src="assets/images/icons/mail.png" alt="Ícone de email">
                     <a href="mailto:gpmc-ea@ufrgs.br"><i>gpmc-ea@ufrgs.br</i></a>
 
-                </li>
-                <li class="footer-phone">
-                    <img src="assets/images/icons/phone.png" alt="Ícone de telefone">
-                    <p><strong>+55 00 0000-0000</strong></p>
                 </li>
             </ul>
         </div>
