--- a/atlas/index.html
+++ b/atlas/index.html
@@ -72,7 +72,7 @@
                   <a class="page-scroll" href="#contact">PUBLICAÇÕES</a>
                 </li>
                 <li class="nav-item">
-                  <a class="btn primary-btn" href="index_us.html">English</a>
+                  <a href="index_us.html"><img src="assets/images/icons/icon_en.png" alt=""></a>
                 </li>
               </ul>
             </div>
@@ -158,65 +158,22 @@
   </section>
   <!--/ End header Area -->
 
-  <div class="background-div">
-    <div class="brand-area">
-      <div class="container">
-        <div class="column">
-          <div class="col-lg-5 col-12">
-            <div class="section-title text-center">
-              <h2>COLABORADORES</h2>
-            </div>
-          </div>
-          <div class="col-lg-7 col-12">
-            <div class="brand-logo-wrapper">
-              <ul class="brand-list liststyle d-flex flex-wrap justify-content-center">
-                <li>
-                  <a href="javascript:void(0)">
-                    <img src="assets/images/institutions/logoNegativaMIT.png" alt="Brand Logo Images" />
-                  </a>
-                </li>
-                <li>
-                  <a href="javascript:void(0)">
-                    <img src="assets/images/institutions/logoUfrgsNegativo.png" alt="Brand Logo Images" />
-                  </a>
-                </li>
-                <li>
-                  <a href="javascript:void(0)">
-                    <img src="assets/images/institutions/logoSabanciNormal.png" alt="Brand Logo Images" />
-                  </a>
-                </li>
-                <li>
-                  <a href="javascript:void(0)">
-                    <img src="assets/images/institutions/logoBologna.png" alt="Brand Logo Images" />
-                  </a>
-                </li>
-                <li>
-                  <a href="javascript:void(0)">
-                    <img src="assets/images/institutions/logoUfgNegativo.png" alt="Brand Logo Images" />
-                  </a>
-                </li>
-                <li>
-                  <a href="javascript:void(0)">
-                    <img src="assets/images/institutions/logoUnb.png" alt="Brand Logo Images" />
-                  </a>
-                </li>
-                <li>
-                  <a href="javascript:void(0)">
-                    <img src="assets/images/institutions/logoNegativaFGV.png" alt="Brand Logo Images" />
-                  </a>
-                </li>
-                <li>
-                  <a href="javascript:void(0)">
-                    <img src="assets/images/institutions/logoTramontinaNegativo.png" alt="Brand Logo Images" />
-                  </a>
-                </li>
-              </ul>
+  <section id="hero-area" class="header-area header-ten">
+    <div class="background-div-inst">
+      <div class="header-inner">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-lg-6 co-12">
+              <div class="home-slider">
+                <div class="header-text"><br><br><br>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
+  </section>
 
   <!-- Start header Area -->
   <section id="hero-area" class="header-area header-ten">
@@ -351,10 +308,6 @@
           <img src="assets/images/icons/mail.png" alt="Ícone de email">
           <a href="mailto:gpmc-ea@ufrgs.br"><i>gpmc-ea@ufrgs.br</i></a>
 
-        </li>
-        <li class="footer-phone">
-          <img src="assets/images/icons/phone.png" alt="Ícone de telefone">
-          <p><strong>+55 00 0000-0000</strong></p>
         </li>
       </ul>
     </div>
