--- a/atlas/index_us.html
+++ b/atlas/index_us.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="en">
 
 <head>
   <!--====== Required meta tags ======-->
@@ -11,7 +11,7 @@
   <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico" />
 
   <!--====== Title ======-->
-  <title>Atlas de Oportunidades</title>
+  <title>Atlas of Opportunity</title>
 
   <!--====== Favicon Icon ======-->
   <link rel="shortcut icon" href="../assets/images/favicon.svg" type="image/svg" />
@@ -54,25 +54,25 @@
             <div class="collapse navbar-collapse sub-menu-bar" id="navbarOne">
               <ul class="navbar-nav m-auto">
                 <li class="nav-item">
-                  <a href="index.html">O PROJETO</a>
+                  <a href="index.html">THE PROJECT</a>
                 </li>
                 <li class="nav-item">
-                  <a href="team.html">COLABORADORES</a>
+                  <a href="team.html">SPONSORS</a>
                 </li>
                 <li class="nav-item">
-                  <a class="page-scroll" href="#pricing">PERFIL DE DADOS</a>
+                  <a class="page-scroll" href="#pricing">DATA PROFILE</a>
                 </li>
                 <li class="nav-item">
                   <a class="page-scroll" href="#team">TUTORIAL</a>
                 </li>
                 <li class="nav-item">
-                  <a class="page-scroll" href="#testimonial">GRUPO DE PESQUISA</a>
+                  <a class="page-scroll" href="#testimonial">RESEARCH GROUP</a>
                 </li>
                 <li class="nav-item">
-                  <a class="page-scroll" href="#contact">PUBLICAÇÕES</a>
+                  <a class="page-scroll" href="#contact">PUBLICATIONS</a>
                 </li>
                 <li class="nav-item">
-                  <a href="index_us.html"><img src="assets/images/icons/icon_en.png" alt=""></a>
+                  <a href="index.html"><img src="assets/images/icons/icon_pt.png" alt=""></a>
                 </li>
               </ul>
             </div>
@@ -80,7 +80,7 @@
             <div class="navbar-btn d-none d-sm-inline-block">
               <ul>
 
-                <li><a class="btn primary-btn" href="http://3.92.188.34:3000/">Ir para o atlas</a></li>
+                <li><a class="btn primary-btn" href="http://3.92.188.34:3000/">Go To Atlas</a></li>
                 <!--http://3.92.188.34:3000/atlas.html-->
               </ul>
             </div>
@@ -105,45 +105,41 @@
               <div class="home-slider">
                 <div class="header-text"><br><br><br>
                   <h1>
-                    Descubra o poder da ciência de dados e da Inteligência Artificial para impulsionar o
-                    desenvolvimento!<br />
+                    Discover the power of data science and Artificial Intelligence to drive development!<br />
                   </h1>
                   <p>
-                    O Atlas de Oportunidades é um projeto open-source materializado num site gratuito de apoio à decisão
-                    que visa ajudar
-                    empreendedores, empresas, governos e outros púbicos interessados em identificar oportunidades de
-                    negócios. O projeto
-                    combina várias fontes de dados, processadas com ciência de dados espaciais e algoritmos de
-                    Inteligência Artificial. O
-                    Atlas traduz as teorias e métodos científicos mais avançados das áreas de administração, estatística
-                    e ciência da
-                    computação num site simples, intuitivo e interativo voltado à geração de empregos, renda e fomentar
-                    o desenvolvimento
-                    econômico sustentável.
+                    The Atlas of Opportunities is an open-source project materialized in a free decision support website
+                    that aims to help
+                    entrepreneurs, companies, governments and other publics interested in identifying business
+                    opportunities. The project
+                    combines multiple data sources, processed with spatial data science and Artificial Intelligence
+                    algorithms. The Atlas
+                    translates the most advanced scientific theories and methods in the areas of management, statistics
+                    and computer science
+                    into a simple, intuitive and interactive website aimed at generating jobs, income and fostering
+                    sustainable economic
+                    development.
                     <br>
                     <br>
-                    O Atlas de Oportunidades - Brasil é coordenado pela Universidade Federal do Rio Grande do Sul
-                    (UFRGS), que faz parte de
-                    uma rede internacional colaborativa de pesquisa viabilizada pelo parceiro principal Massachusetts
+                    The Atlas of Opportunities - Brazil is coordinated by the Federal University of Rio Grande do Sul
+                    (UFRGS), which is part
+                    of an international collaborative research network made possible by the main partner Massachusetts
                     Institute of
-                    Technology (MIT), juntamente com a Sabanci University (Turquia), Universidade de Bolonha e
-                    Universidade Bocconi
-                    (Itália), e as instituições brasileiras Fundação Getúlio Vargas (FGV), Universidade Federal de Goiás
-                    (UFG) e
-                    Universidade de Brasília (UnB). O projeto começou com uma versão do Sul da <a
-                      href="https://opportunity.mit.edu/">Austrália</a>, e
-                    está crescendo para outros países e regiões, como Colchester
-                    <a href="https://mtb.mit.edu/explore/rochester#map=9.6/43.1556/-77.685">(NY-EUA)</a>. Este <a
-                      href="https://github.com/gpmc-lab-ufrgs/atlas-of-opportunity">repositório</a>
-                    detalha o desenvolvimento técnico do Atlas de Oportunidades -
-                    Brasil.
+                    Technology (MIT), together with Sabanci University (Turkey) , University of Bologna and University
+                    Bocconi (Italy), and
+                    the Brazilian institutions Fundação Getúlio Vargas (FGV), Federal University of Goiás (UFG) and
+                    University of Brasília
+                    (UnB). The project started with a <a href="https://opportunity.mit.edu/">South Australian</a>,
+                    version and is growing to other countries and regions such as Colchester
+                    <a href="https://mtb.mit.edu/explore/rochester#map=9.6/43.1556/-77.685">(NY-EUA)</a>. This <a
+                      href="https://github.com/gpmc-lab-ufrgs/atlas-of-opportunity">repository</a>
+                    details the technical development of the Atlas de Oportunidades - Brasil.
                     <br>
                     <br>
-                    Explore o poder da ciência de dados e transforme suas ideias em ações. Junte-se a nós e faça parte
-                    de uma comunidade que
-                    busca impulsionar o desenvolvimento econômico por meio de análises inteligentes. Seja bem-vindo(a)
-                    ao Atlas, onde os
-                    dados se transformam em oportunidades!
+                    Explore the power of data science and turn your ideas into action. Join us and be part of a
+                    community that seeks to
+                    drive economic development through intelligent analytics. Welcome to Atlas, where data becomes
+                    opportunities!
                   </p>
                   <!-- <div class="light-rounded-buttons">
                   <a href="javascript:void(0)" class="btn primary-btn"> SAIBA MAIS... </a>
@@ -185,26 +181,33 @@
             <div class="home-slider">
               <div class="header-text">
                 <h1>
-                  PERFIL DE DADOS<br />
+                  Data Profile - Next to the image with the dimensions of Smart Cities<br />
                 </h1>
                 <p>
-                  O Atlas de Oportunidades integra uma vasta gama de dados provenientes de diversas fontes de
-                  pesquisa,
-                  como o IBGE, o
-                  REGIC, o Banco Central do Brasil, dentre outras. Analisamos, processamos e entregamos informações de
-                  qualidade em
-                  diferentes níveis geográficos, abrangendo estados, cidades e até mesmo dados censitários. Mas não
-                  paramos por aí. Para
-                  facilitar ainda mais a sua jornada de descoberta, utilizamos como base a classificação de Smart
-                  Cities
-                  do Urban Systems
-                  (2018). Essa classificação nos permite organizar as diversas variáveis disponíveis em nossa
-                  plataforma, proporcionando
-                  uma visualização aprimorada e facilitando a consulta por dados de seu interesse específico. 
+                  The Atlas of Opportunities integrates a wide range of data from different research sources, such as
+                  the IBGE, REGIC, and
+                  the Central Bank of Brazil. We analyze, process, and deliver quality information at various geographic
+                  levels, covering
+                  states, cities, and census blocks data. But we don't stop there. To further facilitate your journey of
+                  discovery, we use
+                  the Urban Systems Smart Cities classification Citie as a basis. This classification allows us to
+                  organize the various
+                  variables available on our platform, providing an improved visualization and facilitating the query
+                  for data of your
+                  specific interest.
+                  <br>
+                  <br>
+                  In an increasingly dynamic and competitive world, having up-to-date and accurate information is
+                  essential for making
+                  strategic decisions. Our platform offers a complete and engaging experience, allowing you to explore
+                  business
+                  opportunities based on your interests and needs. Join us and gain access to a universe of strategic
+                  data. Discover new
+                  possibilities, identify trends and drive your success.
                 </p>
-                <div class="light-rounded-buttons">
+                <!-- <div class="light-rounded-buttons">
                   <a href="javascript:void(0)" class="btn primary-btn"> SAIBA MAIS... </a>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
@@ -263,18 +266,16 @@
       <div class="row justify-content-center">
         <div class="col-lg-8">
           <div class="call-action-content text-center">
-            <h2 class="action-title">Não perca nenhuma atualização!</h2>
+            <h2 class="action-title">Dont miss any updates!</h2>
             <p class="text">
-              Receba as novidades sobre o Atlas de Oportunidades diretamente no seu e-mail. Você pode cancelar o
-              cadastro a qualquer
-              momento!
+              Receive the Atlas updates directly in your inbox. You can cancel anytime!
             </p>
             <div class="call-action-form">
               <form action="#">
-                <input type="text" placeholder="Digite seu email" />
+                <input type="text" placeholder="Type your email" />
                 <div class="action-btn rounded-buttons">
                   <button class="btn primary-btn rounded-full">
-                    CADASTRAR
+                    REGISTER
                   </button>
                 </div>
               </form>
@@ -294,7 +295,7 @@
       <img src="assets/images/logo_media.png" alt="Logo do footer">
     </div>
     <div class="contact-footer">
-      <h6>CONTATO</h6>
+      <h6>CONTACT</h6>
       <ul class="footer-links">
         <li class="footer-contact">
           <div class="footer-location">
@@ -330,19 +331,19 @@
     <div>
       <ul class="nav-footer-links">
         <li>
-          <a class="footer-link" href="">O PROJETO</a>
+          <a class="footer-link" href="">THE PROJECT</a>
         </li>
         <li>
-          <a class="footer-link" href="">COLABORADORES</a>
+          <a class="footer-link" href="">SPONSORS</a>
         </li>
         <li>
-          <a class="footer-link" href="">PERFIL DE DADOS</a>
+          <a class="footer-link" href="">DATA PROFILE</a>
         </li>
         <li>
-          <a class="footer-link" href="">PUBLICAÇÕES</a>
+          <a class="footer-link" href="">PUBLICATIONS</a>
         </li>
         <li>
-          <a href="http://3.92.188.34:3000/"><button class="atlas-btn">IR PARA O ATLAS</button></a>
+          <a href="http://3.92.188.34:3000/"><button class="atlas-btn">GO TO ATLAS</button></a>
         </li>
       </ul>
     </div>
