--- a/atlas/team.html
+++ b/atlas/team.html
@@ -100,7 +100,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <div class="content">
+                        <div class="content"><br><br>
                             <h2 class="fw-bold">EQUIPE ATUAL</h2>
                             <p>
                                 <!-- Conheça nossos membros. Texto sobre os membros aqui. -->
@@ -705,7 +705,7 @@
                                 </h4>
                                 <span class="designation">Reseacher
                                     <br>
-                                    Università di Bologna</span>
+                                    Bocconi Università</span>
                             </div>
                             <!-- End Info Box -->
                         </div>
@@ -743,7 +743,7 @@
                                 </h4>
                                 <span class="designation">Reseacher
                                     <br>
-                                    Università di Bologna</span>
+                                    Bocconi Università</span>
                             </div>
                             <!-- End Info Box -->
                         </div>
@@ -1020,7 +1020,9 @@
                     </div>
                 </div>
                 <!-- End Single Team -->
-                <h2>EX-MEMBROS</h2>
+                <div class="text-center"><br><br>
+                    <h2>EX-MEMBROS</h2>
+                </div>
                 <!-- Single Team -->
                 <div class="col-lg-3 col-md-6 col-12">
                     <div class="single-team">
@@ -1242,10 +1244,6 @@
                     <img src="assets/images/icons/mail.png" alt="Ícone de email">
                     <a href="mailto:gpmc-ea@ufrgs.br"><i>gpmc-ea@ufrgs.br</i></a>
 
-                </li>
-                <li class="footer-phone">
-                    <img src="assets/images/icons/phone.png" alt="Ícone de telefone">
-                    <p><strong>+55 00 0000-0000</strong></p>
                 </li>
             </ul>
         </div>
